find_package(Qt4 COMPONENTS QtCore QtNetwork REQUIRED)
include(${QT_USE_FILE})

SET(TCPLIENTTEST_INCLUDE_DIRECTORIES
    "${CMAKE_BINARY_DIR}"
    "${CMAKE_CURRENT_SOURCE_DIR}"
)

LIST(APPEND TCPCLIENTTEST_HEADERS
)

LIST(APPEND TCPCLIENTTEST_SOURCES
    main.cpp
)

SET(TCPCLIENTTEST_MOC_HEADERS
)

QT4_WRAP_CPP(TCPCLIENTTEST_MOC_SRCS ${TCPCLIENTTEST_MOC_HEADERS})

LIST(APPEND TCPCLIENTTEST_SOURCES ${TCPCLIENTTEST_HEADERS})
LIST(APPEND TCPCLIENTTEST_SOURCES ${TCPCLIENTTEST_MOC_HEADERS})
LIST(APPEND TCPCLIENTTEST_SOURCES ${TCPCLIENTTEST_MOC_SRCS})

include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${TCPCLIENTTEST_INCLUDE_DIRECTORIES})
include_directories(${QT_INCLUDE_DIR})

ADD_EXECUTABLE(TcpClientTest ${TCPCLIENTTEST_SOURCES})

TARGET_LINK_LIBRARIES(TcpClientTest ${QT_LIBRARIES} )


INSTALL(TARGETS TcpClientTest DESTINATION ${CMAKE_BINARY_DIR}/bin)
